# ollama-purple-agent

./: README.md
ollama-purple-agent/: README.MD  pyproject.toml
ollama-purple-agent/config/prompts/: attacker_attack.txt  attacker_enumerate.txt  attacker_recon.txt  attacker_recon_extract.txt  judge_evaluate.txt  judge_remediate.txt  report_generate.txt  target_system.txt
ollama-purple-agent/output/reports/: report_llama3_1_8b_20260626_233222.md  report_llama3_1_8b_20260626_235024.md  report_llama3_1_8b_20260627_000830.md
ollama-purple-agent/src/: config.py  main.py
ollama-purple-agent/src/agents/: attacker_agent.py  judge_agent.py  target_agent.py
ollama-purple-agent/src/graph/: edges.py  nodes.py  orchestrator.py  state.py
ollama-purple-agent/src/ui/: dashboard.py
ollama-purple-agent/src/vectors/: library.py
ollama-purple-agent/test/: test_judge.py
